# corsmal_challenge

./: .gitignore  CONTRIBUTION.md  README.md  env.yml  pyproject.toml
corsmal_challenge/: utils.py
corsmal_challenge/data/: audio.py  data_loader.py  dataset.py
corsmal_challenge/models/: audio.py  convolution.py  linear_transformer.py  task1_2.py  transformer.py
corsmal_challenge/train/: pretraining.py
corsmall_challenge/: audio.py
experiments/: 20220109-memo_and_tests.ipynb  20220111-make-dataset.ipynb  20220111-make_pipeline.ipynb  20220111-training.py  20220111-training2.py  20220112-contrastive_learning.py  20220112-training3.py  20220120-cv.py  README.md
