[tool.poetry]
name = "corsmal_challenge"
version = "0.1.0"
description = "project for corsmal challenge"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
mypy = "^0.930"
isort = "^5.10.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
