[tool.poetry]
name = "corsmal_challenge"
version = "0.1.0"
description = "project for corsmal challenge"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.4,<3.11"
Cython = "^0.29.26"
matplotlib = "^3.5.1"
numpy = "^1.21.5"
opencv-python = "^4.5.5.62"
Pillow = "^8.4.0"
scikit-image = "^0.19.1"
scikit-learn = "^1.0.2"
scipy = "^1.7.3"
torch = { url = "https://download.pytorch.org/whl/lts/1.8/cpu/torch-1.8.2%2Bcpu-cp37-cp37m-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/lts/1.8/cpu/torchvision-0.9.2%2Bcpu-cp37-cp37m-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/lts/1.8/torchaudio-0.8.2-cp37-cp37m-linux_x86_64.whl" }

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.930"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
